<resources>
    <string name="app_name">Ultimate Contacts Copier</string>
    <string name="bt_continue">Continue</string>
    <string name="tv_start_title">Let\'s get started</string>
    <string name="tv_start_body">Tap the continue-button below to begin.</string>
    <string name="bt_quit">Quit</string>
    <string name="tb_device">Choose a device</string>
    <string name="tb_transfer">Transfer</string>
    <string name="tb_done">Transfer completed</string>
    <string name="tv_paired_title">Paired devices</string>
    <string name="tv_devices_title">Choose a device</string>
    <string name="tv_devices_empty">No devices found.</string>
    <string name="tv_devices_scanning">Searching for devices…</string>
    <string name="tv_paired_empty">No paired devices.</string>
    <string name="sb_discovery_finished">Device discovery finished</string>
    <string name="action_help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="action_retry">Retry</string>
    <string name="tv_connecting">Connecting to device</string>
    <string name="tv_connected">Connected successfully</string>
    <string name="tv_connection_error">Failed to connect</string>
    <string name="tv_transfer_started">Transferring %1$d contacts</string>
    <string name="tv_transfer_progress">Transferred %1$d of %2$d</string>
    <string name="tv_transfer_finished">Transfer finished</string>
    <string name="tv_transfer_error">Transfer failed</string>
    <string name="tv_contacts_empty">Hang tight - transferred contacts will appear here after the transfer is completed.</string>
    <string name="tv_contact_phone_empty">No phone number</string>
    <string name="bt_scan">Scan</string>
    <string name="bt_finish">Save</string>
    <string name="tv_faq_how">How does UCC work?</string>
    <string name="tv_faq_how_body">UCC transfers contacts from your other device via Bluetooth. This feature is supported by thousands of devices across all manufacturers.</string>
    <string name="tv_faq_permissions">Permissions required</string>
    <string name="tv_faq_permissions_body">
        <![CDATA[
        UCC needs access to these permissions:
        <br><br>&#8226; <b>Bluetooth</b><br>&#9;to transfer contacts
        <br><br>&#8226; <b>Location</b><br>&#9;needed for Bluetooth discovery for devices running Android 6.0 or newer
        <br><br>&#8226; <b>Contacts</b><br>&#9;to save contacts to the device
        <br><br>You\'ll be requested to grant these permissions in the next step.
        ]]>
    </string>
</resources>
