<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    style="@style/CardView.DayNight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="2dp"
    app:cardElevation="@dimen/cardview_default_elevation"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/content_padding"
                android:layout_weight="10"
                android:text="@string/tv_devices_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <ProgressBar
                android:id="@+id/pb_found"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/content_padding"
                android:layout_weight="1"
                android:indeterminate="true" />

            <Button
                android:id="@+id/bt_scan"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bt_scan"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_found_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/content_padding"
            android:layout_marginStart="@dimen/content_padding"
            android:text="@string/tv_devices_empty"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <xyz.santeri.pbap.ui.view.SwagRecyclerView
            android:id="@+id/rv_found"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false" />

    </LinearLayout>
</android.support.v7.widget.CardView>